Pull request #368: AG-12981 fix buttons in modal
Merge in EXTENSIONS/vpn-extension from fix/AG-12981 to master

Squashed commit of the following:

commit 9c28ba99c2be69bf45e57db352e9fb98b36af0c0
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Feb 24 13:07:42 2022 +0300

    AG-12981 fix buttons in modal

--- a/src/options/components/Exclusions/exclusions.pcss
+++ b/src/options/components/Exclusions/exclusions.pcss
@@ -181,13 +181,14 @@
     }
 
     &__buttons {
-        padding-top: 32px;
+        padding-top: 16px;
     }
 
     &__button {
+        margin-top: 16px;
         height: 44px;
         padding: 0 10px;
-        min-width: 220px;
+        min-width: 180px;
         border: 1px solid var(--gray88);
         border-radius: 8px;
         font-size: 16px;
@@ -195,7 +196,6 @@
         letter-spacing: 0.38px;
         text-align: center;
         line-height: 16px;
-        text-transform: uppercase;
 
         &--red {
             border-color: var(--redDark);
